Update publications and talks

--- a/index.html
+++ b/index.html
@@ -76,68 +76,68 @@
           My recent research includes formalisation of semantics of domain-specific languages
           for finance, and a module system for a data-parallel functional programming
           language in the Coq proof assistant.<br>
+          I did my PhD at the University of Copenhagen under the supervision of Martin Elsman.
           During my PhD I was visiting University of Nottingham, where I worked with Paolo Capriotti
           and Nicolai Kraus on formalisation of two-level type theory
-          (Homotopy Type Theory extended with strict equality) in the Lean proof assistant.
+          (Homotopy Type Theory extended with strict equality) in the Lean proof assistant. <br>
+          I spend a year at INRIA Nantes working Nicolas Tabareau on formalising the forcing translation in MetaCoq.
+          <h2 id="publications" class="anchor">Publications</h2>
+          <h4 id="publications-pl-typetheory" class="anchor">Programming languages, type theory and proof assistants</h4>
+          <ul>
+            <li>Danil Annenkov, Mikkel Milo, Jakob Botsch Nielsen, Bas Spitters. “Extracting Tested and Verified Smart Contracts in Coq”. CPP'2021.
+              [<a target="_blank" href="papers/CPP21-extracting-testing-smart-contracts.pdf">PDF</a>][<a target="_blank" href="https://arxiv.org/abs/2012.09138">arXiv</a>][<a target="_blank" href="https://doi.org/10.1145/3437992.3439934">DOI</a>][<a target="_blank" href="https://github.com/AU-COBRA/ConCert/tree/artifact-2020">Coq code</a>]
+            </li>
+            <li>Danil Annenkov, Mikkel Milo, Jakob Botsch Nielsen, and Bas Spitters. “Verifying, testing and running smart contracts in ConCert”. Extended abstract. The Coq workshop 2020. [<a target="_blank" href="papers/ConCert-coq-workshop-2020.pdf">PDF</a>][<a target="_blank" href="https://github.com/AU-COBRA/ConCert">Coq code</a>]</li>
+            <li>Danil Annenkov, Jakob Botsch Nielsen, Bas Spitters. ConCert: A Smart Contract Certification Framework in Coq. CPP'2020.
+              [<a target="_blank" href="papers/ConCert-cpp2020-final.pdf">PDF</a>][<a target="_blank" href="https://arxiv.org/abs/1907.10674">arXiv</a>][<a target="_blank" href="https://github.com/AU-COBRA/ConCert">Coq code</a>]
+            </li>
+            <li>Danil Annenkov, Bas Spitters. Deep and Shallow Embeddings in Coq. TYPES-2019.
+              [<a target="_blank" href="papers/TYPES2019-abstract.pdf">PDF</a>]
+            </li>
+            <li>Danil Annenkov, Paolo Capriotti, Nicolai Kraus, Christian Sattler.
+              Two-Level Type Theory and Applications. Submitted to Mathematical Structures in Computer Science (MSCS), 2019.
+              [<a target="_blank" href="https://arxiv.org/abs/1705.03307">arXiv</a>]
+              [<a target="_blank" href="https://github.com/annenkov/two-level">
+                Lean code</a>]
+            </li>
+            <li>Danil Annenkov, Martin Elsman. Certified Compilation of Financial Contracts. PPDP’18.
+              [<a target="_blank" href="papers/annenkov-elsman-ppdp18.pdf">PDF</a>]
+              [<a target="_blank" href="https://dl.acm.org/citation.cfm?id=3236955">ACM</a>]
+              [<a target="_blank" href="https://github.com/annenkov/contracts">Futhark, Haskell and Coq code</a>]
+            </li>
+            <li>Martin Elsman, Troels Henriksen, Danil Annenkov, Cosmin Oancea.
+              Static Interpretation of Higher-Order Modules in Futhark: functional GPU programming in the large. ICFP’18.
+              [<a target="_blank" href="papers/futhark-modules-icfp18.pdf">PDF</a>]
+              [<a target="_blank" href="https://dl.acm.org/citation.cfm?id=3236792">ACM OpenAccess</a>]
+              [<a target="_blank" href="https://github.com/diku-dk/futhark-icfp18">Coq formalisation</a>]
+            </li>
+            <li>Adventures in Formalisation: Financial Contracts, Modules, and Two-Level Type Theory. PhD thesis, University of Copenhagen, 2018
+              [<a target="_blank" href="papers/DanilAnnenkovThesis.pdf">PDF</a>]
+              [<a target="_blank" href="https://arxiv.org/abs/1811.11317f">arXiv</a>]</li>
+            <li>
+              Danil Annenkov and Martin Elsman. Towards Certified Compilation of Financial Contracts.
+              In Proceedings of the 28th Nordic Workshop on Programming Theory (NWPT’16).
+              Aalborg, DK. November, 2016
+              [<a target="_blank" href="papers/NWPTPayoffLang.pdf">PDF</a>]
+              [<a target="_blank" href="http://nwpt2016.cs.aau.dk/nwpt2016-proceedings.pdf"> Proceedings </a>]
+              [<a target="_blank" href="https://github.com/annenkov/contracts">Haskell and Coq code</a>]
+            </li>
+            <li>
+              Annenkov, D.V., Cherkashin, E.A.,
+              Generation technique for Django MVC web framework using the Stratego transformation language.
+              36th International Convention on Information and Communication Technology, Electronics and Microelectronics (MIPRO),
+              IEEE, pp. 1084-1087, 2013
+              [<a target="_blank" href="papers/MIPRO_Annenkov_Cherkashin_Model_Generation_Stratego_rewriting_language-FULL-v2.pdf">PDF</a>]
+              [<a target="_blank" href="http://ieeexplore.ieee.org/document/6596418/">IEEEXplore </a> ].
+            </li>
+            <li>
+              Annenkov, D.V., Domain-specific languages as a foundation of the approach to software
+              development. Proceedings of the conference “Vinerovskie chteniya”,
+              pp. 142-146 (in Russian), 2013.
+            </li>
+          </ul>
+          <h4 id="publications-model-driven" class="anchor">Model-Driven development, software generation</h4>
         </p>
-        <h2 id="publications" class="anchor">Publications</h2>
-        <h4 id="publications-pl-typetheory" class="anchor">Programming languages, type theory and proof assistants</h4>
-        <ul>
-          <li>Danil Annenkov, Mikkel Milo, Jakob Botsch Nielsen, Bas Spitters. “Extracting Tested and Verified Smart Contracts in Coq”.​ CPP'2021. To appear.
-            [<a target="_blank" href="https://popl21.sigplan.org/details/CPP-2021/25/Extracting-Tested-and-Verified-Smart-Contracts-in-Coq">Conference website</a>]
-</li>
-          <li>Danil Annenkov, Mikkel Milo, Jakob Botsch Nielsen, and Bas Spitters. “Verifying, testing and running smart contracts in ConCert”. Extended abstract. The Coq workshop 2020. [<a target="_blank" href="papers/ConCert-coq-workshop-2020.pdf">PDF</a>][<a target="_blank" href="https://github.com/AU-COBRA/ConCert">Coq code</a>]</li>
-          <li>Danil Annenkov, Jakob Botsch Nielsen, Bas Spitters. ConCert: A Smart Contract Certification Framework in Coq. CPP'2020.
-            [<a target="_blank" href="papers/ConCert-cpp2020-final.pdf">PDF</a>][<a target="_blank" href="https://arxiv.org/abs/1907.10674">arXiv</a>][<a target="_blank" href="https://github.com/AU-COBRA/ConCert">Coq code</a>]
-          </li>
-          <li>Danil Annenkov, Bas Spitters. Deep and Shallow Embeddings in Coq. TYPES-2019.
-            [<a target="_blank" href="papers/TYPES2019-abstract.pdf">PDF</a>]
-          </li>
-          <li>Danil Annenkov, Paolo Capriotti, Nicolai Kraus, Christian Sattler.
-            Two-Level Type Theory and Applications. Submitted to Mathematical Structures in Computer Science (MSCS), 2019.
-            [<a target="_blank" href="https://arxiv.org/abs/1705.03307">arXiv</a>]
-            [<a target="_blank" href="https://github.com/annenkov/two-level">
-              Lean code</a>]
-          </li>
-          <li>Danil Annenkov, Martin Elsman. Certified Compilation of Financial Contracts. PPDP’18.
-            [<a target="_blank" href="papers/annenkov-elsman-ppdp18.pdf">PDF</a>]
-            [<a target="_blank" href="https://dl.acm.org/citation.cfm?id=3236955">ACM</a>]
-            [<a target="_blank" href="https://github.com/annenkov/contracts">Futhark, Haskell and Coq code</a>]
-          </li>
-          <li>Martin Elsman, Troels Henriksen, Danil Annenkov, Cosmin Oancea.
-            Static Interpretation of Higher-Order Modules in Futhark: functional GPU programming in the large. ICFP’18.
-            [<a target="_blank" href="papers/futhark-modules-icfp18.pdf">PDF</a>]
-            [<a target="_blank" href="https://dl.acm.org/citation.cfm?id=3236792">ACM OpenAccess</a>]
-            [<a target="_blank" href="https://github.com/diku-dk/futhark-icfp18">Coq formalisation</a>]
-          </li>
-          <li>Adventures in Formalisation: Financial Contracts, Modules, and Two-Level Type Theory. PhD thesis, University of Copenhagen, 2018
-            [<a target="_blank" href="papers/DanilAnnenkovThesis.pdf">PDF</a>]
-            [<a target="_blank" href="https://arxiv.org/abs/1811.11317f">arXiv</a>]</li>
-          <li>
-            Danil Annenkov and Martin Elsman. Towards Certified Compilation of Financial Contracts.
-            In Proceedings of the 28th Nordic Workshop on Programming Theory (NWPT’16).
-            Aalborg, DK. November, 2016
-            [<a target="_blank" href="papers/NWPTPayoffLang.pdf">PDF</a>]
-            [<a target="_blank" href="http://nwpt2016.cs.aau.dk/nwpt2016-proceedings.pdf"> Proceedings </a>]
-            [<a target="_blank" href="https://github.com/annenkov/contracts">Haskell and Coq code</a>]
-          </li>
-          <li>
-            Annenkov, D.V., Cherkashin, E.A.,
-            Generation technique for Django MVC web framework using the Stratego
-            transformation language.
-            36th International Convention on Information and
-            Communication Technology, Electronics and Microelectronics (MIPRO),
-            IEEE, pp. 1084-1087, 2013
-            [<a target="_blank" href="papers/MIPRO_Annenkov_Cherkashin_Model_Generation_Stratego_rewriting_language-FULL-v2.pdf">PDF</a>]
-            [<a target="_blank" href="http://ieeexplore.ieee.org/document/6596418/">IEEEXplore </a> ].
-          </li>
-          <li>
-            Annenkov, D.V., Domain-specific languages as a foundation of the approach to software
-            development​.  Proceedings of the conference “Vinerovskie chteniya”,
-            pp. 142-146 (in Russian), 2013.
-          </li>
-        </ul>
-        <h4 id="publications-model-driven" class="anchor">Model-Driven development, software generation</h4>
         <ul>
           <li>
             Evgeny A. Cherkashin , Polina V. Belykh, Danil V. Annenkov, Christina K. Paskal.
@@ -176,6 +176,11 @@
         </ul>
         <h2 id="talks" class="anchor">Selected talks</h2>
         <ul>
+          <li> Extracting Tested and Verified Smart Contracts in Coq, CPP'2021 (Denmark, virtual), January 2021.
+            [<a target="_blank" href="papers/CPP2021-slides.pdf">Slides</a>]
+            [<a target="_blank" href="https://www.youtube.com/watch?v=tPRQP_aGM2I">Long video</a>]
+            [<a target="_blank" href="https://www.youtube.com/watch?v=i78akDu2ZhU">Short video</a>]
+
           <li> Verifying, testing and running smart contracts in ConCert, The Coq Workshop (virtual), July 2020.
             [<a target="_blank" href="papers/Coq2020_04-03-concert-slides.pdf">Slides</a>]
             [<a target="_blank" href="https://www.youtube.com/watch?v=tROOcO44Uho&t=12593s">Video</a>]
