--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           During my PhD I was visiting University of Nottingham, where I worked with Paolo Capriotti
           and Nicolai Kraus on formalisation of two-level type theory
           (Homotopy Type Theory extended with strict equality) in the Lean proof assistant. <br>
-          I spend a year at INRIA Nantes working Nicolas Tabareau on formalising the forcing translation in MetaCoq.
+          I spent a year at INRIA Nantes working Nicolas Tabareau on formalising the forcing translation in MetaCoq.
           <h2 id="publications" class="anchor">Publications</h2>
           <h4 id="publications-pl-typetheory" class="anchor">Programming languages, type theory and proof assistants</h4>
           <ul>
