--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     </div>
     <div id="footer">
       <div class="container">
-        <p class="text-muted">Danil Annenkov, 2020</p>
+        <p class="text-muted">Danil Annenkov, 2017-2021</p>
       </div>
     </div>
    <!-- /.container -->
