--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#publications">Publications</a></li>
             <li><a href="#talks">Talks</a></li>
+            <li><a href="#activities">Activities</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#CV">CV</a></li>
           </ul>
@@ -55,7 +56,7 @@
         <h1>Danil Annenkov's page</h1>
         <img src="img/DanilAnnenkov.png" alt="Photo" class="pull-left gap-right">
         <p class="lead">Currently, I am a postdoc at Aarhus University working on
-         verification of smart contracts with Bas Spitters</p>
+         verification of smart contracts with <a href="https://www.cs.au.dk/~spitters/" target="_blank">Bas Spitters</a></p>
         <h3>Contacts</h3>
         <p><strong>Address:</strong>
           IT-byen Katrinebjerg <br>
@@ -217,6 +218,14 @@
             [<a target="_blank" href="papers/HIPERFIT_Workshop_2016.pdf">Slides</a>]
           </li>
         </ul>
+
+        <h2 id="activities" class="anchor">Activities</h2>
+        <ul>
+          <li>PC member of <a href="https://seim-conf.org/en/" target="_blank">Software Engineering and Information Management (SEIM’21)</a></li>
+          <li>From 2019, I am organising the <a href="https://logsem.github.io/seminar/" target="_blank">LogSem seminar</a> at Aarhus University,
+            <a href="https://logsem.github.io/" target="_blank">Logic and Semantics group</a></li>
+        </ul>
+
 
           <h2 id="projects" class="anchor">Previous affiliations </h2>
           <item>
