Fix markup issues

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
           and Nicolai Kraus on formalisation of two-level type theory
           (Homotopy Type Theory extended with strict equality) in the Lean proof assistant. <br>
           I spent a year at INRIA Nantes working Nicolas Tabareau on formalising the forcing translation in MetaCoq.
+        </p>
           <h2 id="publications" class="anchor">Publications</h2>
           <h4 id="publications-pl-typetheory" class="anchor">Programming languages, type theory and proof assistants</h4>
           <ul>
@@ -138,7 +139,6 @@
             </li>
           </ul>
           <h4 id="publications-model-driven" class="anchor">Model-Driven development, software generation</h4>
-        </p>
         <ul>
           <li>
             Evgeny A. Cherkashin , Polina V. Belykh, Danil V. Annenkov, Christina K. Paskal.
@@ -227,17 +227,15 @@
         </ul>
 
 
-          <h2 id="projects" class="anchor">Previous affiliations </h2>
-          <item>
-            <ul>
-              <li>Feb. 2018 - Nov. 2018. Postdoc at INRIA Nantes, working on
-                <a href="http://coqhott.gforge.inria.fr/" target="_blank">CoqHoTT project</a> with Nicolas Tabareau
-              </li>
-              <li>Nov. 2014 - Jan. 2018. PhD student at University Of Copenhagen on <a href="http://hiperfit.dk/" target="_blank">HIPERFIT project</a>
-                under the supervision of Martin Elsman
-              </li>
-            </ul>
-          </item>
+          <h2 id="affiliations" class="anchor">Previous affiliations </h2>
+          <ul>
+            <li>Feb. 2018 - Nov. 2018. Postdoc at INRIA Nantes, working on
+              <a href="http://coqhott.gforge.inria.fr/" target="_blank">CoqHoTT project</a> with Nicolas Tabareau
+            </li>
+            <li>Nov. 2014 - Jan. 2018. PhD student at University Of Copenhagen on <a href="http://hiperfit.dk/" target="_blank">HIPERFIT project</a>
+              under the supervision of Martin Elsman
+            </li>
+          </ul>
           <h2 id="projects" class="anchor">Projects and repositories</h2>
           <p>
             Not exhaustive list of projects I have contributed to.
@@ -253,7 +251,6 @@
             Current implementation uses the version of Coq supporting definitional proof-irrelevance
             (by Gaëtan Gilbert, <a target="_blank"  href="https://github.com/SkySkimmer/coq"> link to the repo </a>).
           </p>
-        </ul>
         <h3><a target="_blank" href="https://github.com/annenkov/two-level">
             Two-level type theory</a></h3>
         <p>
@@ -275,7 +272,7 @@
           <a target="_blank" href="https://github.com/annenkov/contracts/blob/master/doc/icfp2015.pdf">
             ICFP 2015 paper</a> with templating features, and certified compilation to a
           simple intermediate payoff expression language (PEL). This expression language can be used to obtain so called
-          &quotpayoff expression&quot for using in a context of a &quotpricing engine&quot
+          &quot;payoff expression&quot; for using in a context of a &quot;pricing engine&quot;
           (software, that uses probabilistic modeling of possible future contract price using Monte-Carlo simulation).
           We use Coq to prove soundness of the compiler from the Contract DSL to PEL, and
           use Coq's code extraction feature, to obtain correct Haskell implementation of the compiler.
