--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             on <a target="_blank" href="https://bitbucket.org/ib_soft/">Bitbucket</a>
           </p>
           <h3><a target="_blank" href="https://github.com/annenkov/trace-monoids">Trace monoids in Cubical Agda</a></h3>
-          <p>A definitions of the trace monoid (free partially commutative monoid) using HITs. Some simple examples, including reasoning about database transaction schedules.</p>
+          <p>A definition of the trace monoid (free partially commutative monoid) using HITs. Some simple examples, including reasoning about database transaction schedules.</p>
           <h3><a target="_blank" href="https://github.com/CoqHott/template-coq-forcing/tree/sprop">Forcing translation in Template Coq</a></h3>
           <p>Implementation of the CBN forcing translation using typed meta-programming facilities of
             Template Coq. Based on the OCaml forcing translation plugin (by Jaber, Pédrot, Sozeau,
