--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </li>
             <li>Adventures in Formalisation: Financial Contracts, Modules, and Two-Level Type Theory. PhD thesis, University of Copenhagen, 2018
               [<a target="_blank" href="papers/DanilAnnenkovThesis.pdf">PDF</a>]
-              [<a target="_blank" href="https://arxiv.org/abs/1811.11317f">arXiv</a>]</li>
+              [<a target="_blank" href="https://arxiv.org/abs/1811.11317">arXiv</a>]</li>
             <li>
               Danil Annenkov and Martin Elsman. Towards Certified Compilation of Financial Contracts.
               In Proceedings of the 28th Nordic Workshop on Programming Theory (NWPT’16).
