--- a/index.html
+++ b/index.html
@@ -86,14 +86,28 @@
           <h2 id="publications" class="anchor">Publications</h2>
           <h4 id="publications-pl-typetheory" class="anchor">Programming languages, type theory and proof assistants</h4>
           <ul>
-            <li>Danil Annenkov, Mikkel Milo, Jakob Botsch Nielsen, and Bas Spitters. "Extending MetaCoq Erasure: Extraction to Rust and Elm". Extended abstract. The Coq Workshop 2021[<a target="_blank" href="papers/extraction-rust-elm-coq-workshop2021.pdf">PDF</a>]
+            <li>Danil Annenkov, Mikkel Milo, and Bas Spitters. "<a target="_blank" href="https://icfp21.sigplan.org/details/mlfamilyworkshop-2021-papers/8/Code-Extraction-from-Coq-to-ML-like-languages">Code Extraction from Coq to ML-like languages</a>". Extended abstract. ML Workshop 2021.
+              [<a target="_blank" href="papers/ml-workshop-2021-extraction-to-ml-like-languages.pdf">PDF</a>]
+
+            </li>
+            <li>Danil Annenkov, Mikkel Milo, Jakob Botsch Nielsen, and Bas Spitters. "Extending MetaCoq Erasure: Extraction to Rust and Elm". Extended abstract. The Coq Workshop 2021.
+              [<a target="_blank" href="papers/extraction-rust-elm-coq-workshop2021.pdf">PDF</a>]
+              [<a target="_blank" href="https://coq-workshop.gitlab.io/2021/">Workshop program</a>]
+              [<a target="_blank" href="papers/coq-workshop-2021-slides.pdf">Slides</a>]
             </li>
             <li>Danil Annenkov, Mikkel Milo, Jakob Botsch Nielsen, Bas Spitters. “Extracting Tested and Verified Smart Contracts in Coq”. CPP'2021.
-              [<a target="_blank" href="papers/CPP21-extracting-testing-smart-contracts.pdf">PDF</a>][<a target="_blank" href="https://arxiv.org/abs/2012.09138">arXiv</a>][<a target="_blank" href="https://doi.org/10.1145/3437992.3439934">DOI</a>][<a target="_blank" href="https://github.com/AU-COBRA/ConCert/tree/artifact-2020">Coq code</a>]
+              [<a target="_blank" href="papers/CPP21-extracting-testing-smart-contracts.pdf">PDF</a>]
+              [<a target="_blank" href="https://arxiv.org/abs/2012.09138">arXiv</a>]
+              [<a target="_blank" href="https://doi.org/10.1145/3437992.3439934">DOI</a>]
+              [<a target="_blank" href="https://github.com/AU-COBRA/ConCert/tree/artifact-2020">Coq code</a>]
             </li>
-            <li>Danil Annenkov, Mikkel Milo, Jakob Botsch Nielsen, and Bas Spitters. “Verifying, testing and running smart contracts in ConCert”. Extended abstract. The Coq Workshop 2020. [<a target="_blank" href="papers/ConCert-coq-workshop-2020.pdf">PDF</a>][<a target="_blank" href="https://github.com/AU-COBRA/ConCert">Coq code</a>]</li>
+            <li>Danil Annenkov, Mikkel Milo, Jakob Botsch Nielsen, and Bas Spitters. “Verifying, testing and running smart contracts in ConCert”. Extended abstract. The Coq Workshop 2020.
+              [<a target="_blank" href="papers/ConCert-coq-workshop-2020.pdf">PDF</a>]
+              [<a target="_blank" href="https://github.com/AU-COBRA/ConCert">Coq code</a>]</li>
             <li>Danil Annenkov, Jakob Botsch Nielsen, Bas Spitters. ConCert: A Smart Contract Certification Framework in Coq. CPP'2020.
-              [<a target="_blank" href="papers/ConCert-cpp2020-final.pdf">PDF</a>][<a target="_blank" href="https://arxiv.org/abs/1907.10674">arXiv</a>][<a target="_blank" href="https://github.com/AU-COBRA/ConCert">Coq code</a>]
+              [<a target="_blank" href="papers/ConCert-cpp2020-final.pdf">PDF</a>]
+              [<a target="_blank" href="https://arxiv.org/abs/1907.10674">arXiv</a>]
+              [<a target="_blank" href="https://github.com/AU-COBRA/ConCert">Coq code</a>]
             </li>
             <li>Danil Annenkov, Bas Spitters. Deep and Shallow Embeddings in Coq. TYPES-2019.
               [<a target="_blank" href="papers/TYPES2019-abstract.pdf">PDF</a>]
