--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
         <h2 id="activities" class="anchor">Activities</h2>
         <ul>
-          <li>PC member of <a href="https://seim-conf.org/en/" target="_blank">Software Engineering and Information Management (SEIM’21)</a></li>
+          <li>PC member of <a href="https://seim-conf.org/en/" target="_blank">Software Engineering and Information Management (SEIM’21)</a> conference</li>
           <li>From 2019, I am organising the <a href="https://logsem.github.io/seminar/" target="_blank">LogSem seminar</a> at Aarhus University,
             <a href="https://logsem.github.io/" target="_blank">Logic and Semantics group</a></li>
         </ul>
