--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         <p><strong>Email</strong>: danil.v.annenkov at gmail.com</p>
         <p><a target="_blank" href="https://scholar.google.com/citations?user=JjtxzfkAAAAJ&hl=en">Google Scholar profile</a>,
           <a target="_blank" href="https://www.researchgate.net/profile/Danil_Annenkov">ResearchGate profile</a>,
-          <a target="_blank" href="https://arxiv.org/a/annenkov_d_1.html">arXiv profile</a></p>
-          <a target="_blank" href="https://orcid.org/0000-0001-8278-3069">ORCID</a>
-          <a target="_blank" href="https://dblp.org/pid/200/7942.html">dblp</a>
+          <a target="_blank" href="https://arxiv.org/a/annenkov_d_1.html">arXiv profile</a>,
+          <a target="_blank" href="https://orcid.org/0000-0001-8278-3069">ORCID</a>,
+          <a target="_blank" href="https://dblp.org/pid/200/7942.html">dblp</a></p>
       </div>
       <div id="main">
         <h2 id="research" class="anchor">Research interests</h2>
