--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <li>Danil Annenkov, Mikkel Milo, Jakob Botsch Nielsen, Bas Spitters. “Extracting Tested and Verified Smart Contracts in Coq”. CPP'2021.
               [<a target="_blank" href="papers/CPP21-extracting-testing-smart-contracts.pdf">PDF</a>]
               [<a target="_blank" href="https://arxiv.org/abs/2012.09138">arXiv</a>]
-              [<a target="_blank" href="https://doi.org/10.1145/3437992.3439934">DOI</a>]
+              [<a target="_blank" href="https://doi.org/10.1145/3437992.3439934">DOI: 10.1145/3437992.3439934</a>]
               [<a target="_blank" href="https://github.com/AU-COBRA/ConCert/tree/artifact-2020">Coq code</a>]
             </li>
             <li>Danil Annenkov, Mikkel Milo, Jakob Botsch Nielsen, and Bas Spitters. “Verifying, testing and running smart contracts in ConCert”. Extended abstract. The Coq Workshop 2020.
@@ -123,6 +123,7 @@
             <li>Danil Annenkov, Martin Elsman. Certified Compilation of Financial Contracts. PPDP’18.
               [<a target="_blank" href="papers/annenkov-elsman-ppdp18.pdf">PDF</a>]
               [<a target="_blank" href="https://dl.acm.org/citation.cfm?id=3236955">ACM</a>]
+              [<a target="_blank" href="https://doi.org/10.1145/3236950.3236955">DOI: 10.1145/3236950.3236955</a>]
               [<a target="_blank" href="https://github.com/annenkov/contracts">Futhark, Haskell and Coq code</a>]
             </li>
             <li>Martin Elsman, Troels Henriksen, Danil Annenkov, Cosmin Oancea.
