--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
           <h2 id="publications" class="anchor">Publications</h2>
           <h4 id="publications-pl-typetheory" class="anchor">Programming languages, type theory and proof assistants</h4>
           <ul>
+            <li>Danil Annenkov, Mikkel Milo, Jakob Botsch Nielsen, Bas Spitters. "Extracting functional programs from Coq, in Coq". Preprint. Extended and reworked version of the CPP'21 paper.
+              [<a target="_blank" href="papers/extracting-from-coq-in-coq.pdf">PDF</a>]
+              [<a target="_blank" href="https://arxiv.org/abs/2108.02995">arXiv</a>]
+            </li>
             <li>Danil Annenkov, Mikkel Milo, and Bas Spitters. "<a target="_blank" href="https://icfp21.sigplan.org/details/mlfamilyworkshop-2021-papers/8/Code-Extraction-from-Coq-to-ML-like-languages">Code Extraction from Coq to ML-like languages</a>". Extended abstract. ML Workshop 2021.
               [<a target="_blank" href="papers/ml-workshop-2021-extraction-to-ml-like-languages.pdf">PDF</a>]
 
