--- a/index.html
+++ b/index.html
@@ -231,8 +231,7 @@
             [<a target="_blank" href="papers/nominal_slides.pdf">Slides</a>]
             [<a target="_blank" href="https://github.com/annenkov/stlcnorm">Coq code</a>]
           </li>
-          <li>Danil Annenkov (work with Paolo Capriotti and Nicolai Kraus).
-            Formalisations Using Two-Level Type Theory. HoTT/UF Workshop 2017, Oxford, UK.
+          <li>Formalisations Using Two-Level Type Theory (with Paolo Capriotti and Nicolai Kraus), HoTT/UF Workshop 2017, Oxford, UK.
             [<a target="_blank" href="https://hott-uf.github.io/2017/slides/Annenkov.pdf">Slides</a>]
             [<a target="_blank" href="https://hott-uf.github.io/2017/abstracts/twoleveltt.pdf">Abstract</a>]
           </li>
