--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <h2 id="publications" class="anchor">Publications</h2>
           <h4 id="publications-pl-typetheory" class="anchor">Programming languages, type theory and proof assistants</h4>
           <ul>
-            <li>Danil Annenkov, Mikkel Milo, Jakob Botsch Nielsen, Bas Spitters. "Extracting functional programs from Coq, in Coq". Preprint. Extended and reworked version of the CPP'21 paper.
+            <li>Danil Annenkov, Mikkel Milo, Jakob Botsch Nielsen, Bas Spitters. "Extracting functional programs from Coq, in Coq". Accepted to Journal of Functional Programming (JFP). 2022.
               [<a target="_blank" href="papers/extracting-from-coq-in-coq.pdf">PDF</a>]
               [<a target="_blank" href="https://arxiv.org/abs/2108.02995">arXiv</a>]
             </li>
